--- a/Portal.PL/Views/Account/AddUser.cshtml
+++ b/Portal.PL/Views/Account/AddUser.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "AddUser";
+    ViewData["Title"] = SharedLocalizer["AddUser"];
 }
 
 @model Portal.Application.Dtos.AddUserDto
