--- a/Portal.PL/Views/_ViewImports.cshtml
+++ b/Portal.PL/Views/_ViewImports.cshtml
@@ -1,1 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
+@using Microsoft.Extensions.Localization
+@using Portal.PL.Language
+
+@inject IStringLocalizer<SharedResource> SharedLocalizer
