--- a/Portal.PL/Views/Account/AddRole.cshtml
+++ b/Portal.PL/Views/Account/AddRole.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Portal.Application.Dtos.RoleVM
 
 @{
-    ViewData["Title"] = "AddRole";
+    ViewData["Title"] = SharedLocalizer["AddRole"];
 }
 
 @if(ViewBag.Message != null)
@@ -23,13 +23,13 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-default" />
+                <input type="submit"  value="@SharedLocalizer["Add"]" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="Home">Back to List</a>
+    <a asp-action="Index" asp-controller="Home">@SharedLocalizer["BacktoList"]</a>
 </div>
 
